# Quest

./:  build.bat  .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Halcyon Debug Output.txt  README.md  build.bat  build.sh  config.bat  config.sh  main.cpp  meson.build
include/quest/: animatable.hpp  app.hpp  arguments.hpp  atlas.hpp  console.hpp  constants.hpp  data_loader.hpp  entity_manager.hpp  event_manager.hpp  events.hpp  field.hpp  game.hpp  helpers.hpp  rfem.hpp  scene_manager.hpp  sprite.hpp  stack_poly.hpp  static_vector.hpp  text_field.hpp  thread_pool.hpp  types.hpp
include/quest/commands/: defs.hpp
include/quest/scene/: base.hpp  console.hpp  dummy.hpp  main_menu.hpp  manager.hpp
include/quest/scenes/: base.hpp  console.hpp  main_menu.hpp
include/quest/state/: base.hpp  console.hpp  intro.hpp  main_menu.hpp  rest.hpp  window_expansion.hpp
include/quest/util/: move_only_function.hpp
scripts/: debug.sh  release.sh
src/: app.cpp  arguments.cpp  atlas.cpp  console.cpp  data_loader.cpp  field.cpp  game.cpp  helpers.cpp  main.cpp  scene_manager.cpp  sprite.cpp  text_field.cpp  thread_pool.cpp
src/scene/: console.cpp  dummy.cpp  main_menu.cpp  manager.cpp
src/scenes/: console.cpp  main_menu.cpp
src/state/: console.cpp  intro.cpp  main_menu.cpp  rest.cpp  window_expansion.cpp
